[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "viv"
description = "viv isn't venv"
authors = [{ name = "Daylin Morgan", email = "daylinmorgan@gmail.com" }]
dependencies = []
requires-python = ">= 3.8"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/daylinmorgan/viv"
repository = "https://github.com/daylinmorgan/viv"

[project.scripts]
viv = "viv.viv:main"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
  "pre-commit>=3",
  "mypy>=0.991"
]
