[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "viv"
description = "viv isn't venv"
authors = [{ name = "Daylin Morgan", email = "daylinmorgan@gmail.com" }]
dependencies = []
requires-python = ">= 3.8"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/daylinmorgan/viv"
repository = "https://github.com/daylinmorgan/viv"

[project.scripts]
viv = "viv:main"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3",
    "mypy>=0.991",
]
docs = [
    "mkdocs-material>=9.1.15",
    "yartsu"
]

[tool.ruff]
select = ["E","F","I"]
ignore = ["E402"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
