[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "viv"
description = "viv isn't venv"
authors = [{ name = "Daylin Morgan", email = "daylinmorgan@gmail.com" }]
dependencies = []
requires-python = ">= 3.8"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/daylinmorgan/viv"
repository = "https://github.com/daylinmorgan/viv"

[project.scripts]
viv = "viv:main"

[tool.pdm]
version = { source = "scm" }
# need python 3.9 for these which I usually have anyways
ignore_package_warnings = ["sphinx*", "myst-parser"]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "astor>=0.8.1",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
    "shibuya",
    "yartsu",
]
test = [
  "pytest",
  "sampleproject"
] 

[tool.ruff.lint]
select = ["E","F","I"]
ignore = ["E402"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
